# Inside of setup.cfg
[metadata]
name = PyZPK
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = Benardi Nunes
author-email = benardinunes@gmail.com
project_urls =
    Source=https://github.com/Benardi/PyZPK
    Tracker=https://github.com/Benardi/PyZPK/issues
license = Apache
license_file = LICENSE
