# Inside of setup.cfg
[metadata]
name = PyZPK
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = Benardi Nunes
author-email = benardinunes@gmail.com
project_urls =
    Source=https://github.com/OpenMined/PyZPK
    Tracker=https://github.com/OpenMined/PyZPK/issues
license = Apache
license_file = LICENSE
